# vibe-trader

./: .gitignore  README.md  ai_functions.py  alpaca-test.ipynb  annita-test.ipynb  finhubb-test.ipynb  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
Elijah/: Buy Function  agent.py  alpaca_tools.py
Precious/: alpaca-test.ipynb  finnhub-test.ipynb
Precious/multi_tool_agent/: ai_functions.py
docs/: index.md
vibe_trader_agent/: .env.example  agent.py  alpaca_tools.py
