[project]
name = "vibe-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.40.1",
    "finnhub-python>=2.4.23",
    "google-adk>=1.1.1",
    "jupyter>=1.1.1",
    "kaleido>=1.0.0",
    "plotly[express]>=6.2.0",
    "python-dotenv>=1.1.1",
]